; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/extr_ste_dma40_ll.c_d40_log_lli_lcla_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/extr_ste_dma40_ll.c_d40_log_lli_lcla_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d40_log_lli = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @d40_log_lli_lcla_write(%struct.d40_log_lli* %0, %struct.d40_log_lli* %1, %struct.d40_log_lli* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.d40_log_lli*, align 8
  %7 = alloca %struct.d40_log_lli*, align 8
  %8 = alloca %struct.d40_log_lli*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.d40_log_lli* %0, %struct.d40_log_lli** %6, align 8
  store %struct.d40_log_lli* %1, %struct.d40_log_lli** %7, align 8
  store %struct.d40_log_lli* %2, %struct.d40_log_lli** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load %struct.d40_log_lli*, %struct.d40_log_lli** %7, align 8
  %12 = load %struct.d40_log_lli*, %struct.d40_log_lli** %8, align 8
  %13 = load i32, i32* %9, align 4
  %14 = load i32, i32* %10, align 4
  %15 = call i32 @d40_log_lli_link(%struct.d40_log_lli* %11, %struct.d40_log_lli* %12, i32 %13, i32 %14)
  %16 = load %struct.d40_log_lli*, %struct.d40_log_lli** %8, align 8
  %17 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.d40_log_lli*, %struct.d40_log_lli** %6, align 8
  %20 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %19, i64 0
  %21 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %20, i32 0, i32 1
  %22 = call i32 @writel_relaxed(i32 %18, i32* %21)
  %23 = load %struct.d40_log_lli*, %struct.d40_log_lli** %8, align 8
  %24 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.d40_log_lli*, %struct.d40_log_lli** %6, align 8
  %27 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %26, i64 0
  %28 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %27, i32 0, i32 0
  %29 = call i32 @writel_relaxed(i32 %25, i32* %28)
  %30 = load %struct.d40_log_lli*, %struct.d40_log_lli** %7, align 8
  %31 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.d40_log_lli*, %struct.d40_log_lli** %6, align 8
  %34 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %33, i64 1
  %35 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %34, i32 0, i32 1
  %36 = call i32 @writel_relaxed(i32 %32, i32* %35)
  %37 = load %struct.d40_log_lli*, %struct.d40_log_lli** %7, align 8
  %38 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.d40_log_lli*, %struct.d40_log_lli** %6, align 8
  %41 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %40, i64 1
  %42 = getelementptr inbounds %struct.d40_log_lli, %struct.d40_log_lli* %41, i32 0, i32 0
  %43 = call i32 @writel_relaxed(i32 %39, i32* %42)
  ret void
}

declare dso_local i32 @d40_log_lli_link(%struct.d40_log_lli*, %struct.d40_log_lli*, i32, i32) #1

declare dso_local i32 @writel_relaxed(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
